compiler/testData/diagnostics/tests/subtyping/memberAnonymousObjects.kt
class Test {
    private var x = object {};
    constructor {
        x = <!TYPE_MISMATCH!>object<!> {}
    }
}